[project]
name = "sangwoo_cmd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
sangwoo_cmd = 'sangwoo_cmd.cmd:call' 
